--- a/TolyID/MVVM/Views/CadastroDeCaptura/FichaAnestesicaView.xaml
+++ b/TolyID/MVVM/Views/CadastroDeCaptura/FichaAnestesicaView.xaml
@@ -93,10 +93,8 @@
                         Command="{Binding AdicionaParametrosFisiologicosCommand}"/>
 
                 <Button Text="Próximo"
-                        TextColor="White"
-                        Background="{StaticResource Primary}"
                         WidthRequest="100"
-                        CornerRadius="25"
+                        Style="{StaticResource Botao}"
                         input:FormView.IsSubmitButton="True"/>
             </input:FormView>
 
