--- a/TolyID/MVVM/Views/TatuView.xaml
+++ b/TolyID/MVVM/Views/TatuView.xaml
@@ -69,7 +69,9 @@
                                 <SwipeView>
                                     <SwipeView.LeftItems>
                                         <SwipeItems SwipeBehaviorOnInvoked="Close">
-                                            <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:TatuViewModel}}, Path=DeletaCapturaCommand}" CommandParameter="{Binding .}">
+                                            <SwipeItemView Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:TatuViewModel}}, Path=DeletaCapturaCommand}" 
+                                                           CommandParameter="{Binding .}"
+                                                           IsVisible="{Binding FoiEnviadoParaApi, Converter={StaticResource InvertedBoolConverter}}">
                                                 <Frame BorderColor="Transparent" BackgroundColor="LightPink"
                                                        CornerRadius="0"
                                                        Padding="10"
@@ -95,18 +97,27 @@
                                         </StackLayout.GestureRecognizers>
 
                                         <Frame Padding="20, 10, 10, 10" BorderColor="Transparent" BackgroundColor="Transparent" InputTransparent="False" CornerRadius="0">
-                                          
-                                            <StackLayout Spacing="-16">
-                                                <Label Text="{Binding DadosGerais.DataHoraDeCaptura, StringFormat='Data: {0:dd/MM/yyyy}'}" 
-                                                       FontFamily="Inter-Medium" 
-                                                       FontSize="17"  
-                                                       TextColor="{StaticResource Texto}"/>
-                                                <Label Text="{Binding DadosGerais.DataHoraDeCaptura.TimeOfDay, StringFormat='&#x0a;Horário: {0:hh\\:mm}'}" 
-                                                       FontFamily="Inter-Regular" 
-                                                       FontSize="15" 
-                                                       TextColor="{StaticResource Texto}"
-                                                       Opacity=".85"/>
-                                            </StackLayout>
+                                            <Grid ColumnDefinitions="8*, 2*">
+
+                                                <StackLayout Spacing="-16">
+                                                    <Label Text="{Binding DadosGerais.DataHoraDeCaptura, StringFormat='Data: {0:dd/MM/yyyy}'}" 
+                                                           FontFamily="Inter-Medium" 
+                                                           FontSize="17"  
+                                                           TextColor="{StaticResource Texto}"/>
+                                                    <Label Text="{Binding DadosGerais.DataHoraDeCaptura.TimeOfDay, StringFormat='&#x0a;Horário: {0:hh\\:mm}'}" 
+                                                           FontFamily="Inter-Regular" 
+                                                           FontSize="15" 
+                                                           TextColor="{StaticResource Texto}"
+                                                           Opacity=".85"/>
+                                                </StackLayout>
+
+                                                <Image Grid.Column="1"
+                                                       VerticalOptions="CenterAndExpand"
+                                                       HorizontalOptions="CenterAndExpand"
+                                                       Scale="1.3"                                                       
+                                                       Source="icone_dessincronizado.png"
+                                                       IsVisible="{Binding FoiEnviadoParaApi, Converter={StaticResource InvertedBoolConverter}}"/>
+                                            </Grid>
                                         </Frame>
                                         <BoxView BackgroundColor="Black" Opacity=".25" HeightRequest=".1"/>
                                     </StackLayout>
