--- a/TolyID/MVVM/Views/EditarTatuPopup.xaml
+++ b/TolyID/MVVM/Views/EditarTatuPopup.xaml
@@ -44,23 +44,15 @@
        
 
         <Grid ColumnDefinitions="*, *" ColumnSpacing="15" Padding="10">
-            <Button CornerRadius="20" 
-                    Text="Cancelar" 
-                    TextColor="White" 
+            <Button Text="Cancelar" 
                     Clicked="Cancelar_Clicked"
-                    BackgroundColor="{StaticResource Primary}"
-                    WidthRequest="90"
-                    HeightRequest="40"/>
+                    Style="{StaticResource BotaoSecundario}"/>
 
-            <Button CornerRadius="20" 
-                    Grid.Column="1" 
+            <Button Grid.Column="1" 
                     Text="Atualizar" 
-                    TextColor="White" 
                     Clicked="Atualizar_Clicked" 
                     Command="{Binding AtualizaCommand}"
-                    BackgroundColor="{StaticResource Primary}"
-                    WidthRequest="90"
-                    HeightRequest="40"/>
+                    Style="{StaticResource Botao}"/>
         </Grid>
 
     </VerticalStackLayout>
